--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
 
       --kippstrip-h: auto;
 
-      --rotSign: 1;
       --rot: 0deg;
     }
 
@@ -109,6 +108,8 @@
       border: 2px solid rgba(0,0,0,0.55);
       box-shadow: 0 10px 16px rgba(0,0,0,0.10);
       padding:0;
+      position: relative;
+      overflow: hidden;
     }
     .navBtn span{
       font-weight: 1000;
@@ -117,11 +118,33 @@
       color: rgba(0,0,0,0.88);
       text-shadow: 0 1px 0 rgba(255,255,255,0.30);
       transform: translateY(-0.5px);
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; /* verhindert Emoji-Look */
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
     }
     .navBtn:active{
       transform: scale(0.98);
       filter: brightness(1.03);
+    }
+
+    /* Back-Icon: liegendes U + Pfeil, gleiche Strichstärke wie X */
+    .backIcon{
+      width: 30px;
+      height: 30px;
+      display:block;
+    }
+    .backDots{
+      position:absolute;
+      bottom: 4px;
+      width: 100%;
+      display:flex;
+      justify-content: space-between;
+      padding: 0 7px;
+      box-sizing: border-box;
+      font-weight: 900;
+      font-size: 11px;
+      color: rgba(0,0,0,0.88);
+      text-shadow: 0 1px 0 rgba(255,255,255,0.25);
+      pointer-events:none;
+      line-height: 1;
     }
 
     .titleMain{
@@ -209,7 +232,6 @@
     }
 
     /* ===== Target Zahl auf farbigen Feldern ===== */
-    /* FIX: Rotation darf NICHT durch Animation überschrieben werden -> Rotation über CSS-Variable */
     @keyframes targetBreath{
       0%,100%{ transform: translate(-50%, -50%) rotate(var(--trot, 0deg)) scale(1); opacity: 0.95; }
       50%    { transform: translate(-50%, -50%) rotate(var(--trot, 0deg)) scale(1.10); opacity: 1; }
@@ -219,7 +241,7 @@
       left:50%;
       top:50%;
       font-weight: 900;
-      font-size: clamp(18px, 8vmin, 36px); /* exakt wie Slot-Zahlen */
+      font-size: clamp(18px, 8vmin, 36px);
       color: rgba(0,0,0,0.92);
       text-shadow: 0 1px 0 rgba(255,255,255,0.35);
       line-height: 1;
@@ -234,11 +256,10 @@
       justify-content:center;
     }
 
-    /* ✅ Zahlenfuß IMMER Richtung Boxmitte */
-    .trot-top    { --trot: 0deg; }     /* oben: Fuß nach unten */
-    .trot-bottom { --trot: 180deg; }   /* unten: Fuß nach oben */
-    .trot-left   { --trot: -90deg; }   /* links: Fuß nach rechts (zur Mitte) */
-    .trot-right  { --trot: 90deg; }    /* rechts: Fuß nach links (zur Mitte) */
+    .trot-top    { --trot: 0deg; }
+    .trot-bottom { --trot: 180deg; }
+    .trot-left   { --trot: -90deg; }
+    .trot-right  { --trot: 90deg; }
 
     /* ===== FLOOR ===== */
     .floor{
@@ -382,10 +403,11 @@
       line-height: 1;
     }
 
-    .read-south { --num-rot: calc(var(--rotSign) * 0deg); }
-    .read-west  { --num-rot: calc(var(--rotSign) * 90deg); }
-    .read-east  { --num-rot: calc(var(--rotSign) * -90deg); }
-    .read-north { --num-rot: calc(var(--rotSign) * 180deg); }
+    /* Zahlen-Orientierung der Slot-Tiles bleibt wie gehabt */
+    .read-south { --num-rot: 0deg; }
+    .read-west  { --num-rot: 90deg; }
+    .read-east  { --num-rot: -90deg; }
+    .read-north { --num-rot: 180deg; }
 
     .s-3b{ left: calc(1 * var(--step)); top: calc(2 * var(--step)); }
     .s-4b{ left: calc(1 * var(--step)); top: calc(3 * var(--step)); }
@@ -618,6 +640,7 @@
       user-select:none;
     }
 
+    /* ✅ 00P immer “oben” (nicht verdeckt) */
     .gcPoints{
       font-weight: 1000;
       color: var(--ui-text);
@@ -626,6 +649,8 @@
       line-height: 0.95;
       letter-spacing: 0.02em;
       font-variant-numeric: tabular-nums;
+      position: relative;
+      z-index: 50;
     }
     .gcHi{
       color: var(--ui-text);
@@ -633,6 +658,8 @@
       font-size: 12px;
       opacity: 0.92;
       text-shadow: 0 1px 0 rgba(0,0,0,0.35);
+      position: relative;
+      z-index: 50;
     }
 
     .gcBottom{
@@ -670,9 +697,9 @@
       filter: brightness(0.97);
     }
 
-    /* ===== KIPPANZAHL Label + Layout FIX ===== */
+    /* ===== KIPPANZAHL Label + Layout ===== */
     #decisionPanel{
-      padding: 0 12px; /* linksbündig mit erster Taste wie gewünscht */
+      padding: 0 12px;
       box-sizing: border-box;
     }
 
@@ -682,30 +709,22 @@
       text-transform: uppercase;
       color: var(--ui-text);
       text-shadow: 0 1px 0 rgba(0,0,0,0.35);
-
-      /* so groß wie 00P */
       font-size: 34px;
       line-height: 0.95;
-
       text-align: left;
       user-select:none;
-
       margin-top: 10px;
-      margin-bottom: 14px; /* größerer Abstand zu den Buttons */
+      margin-bottom: 14px;
     }
 
-    /* ===== Kippanzahl Buttons ===== */
     .miniBtn{
       flex: 1 1 0;
       border: 1px solid rgba(0,0,0,0.35);
       background: rgba(234,215,190,0.95);
       color: #2a160c;
       font-weight: 1000;
-
-      /* ✅ Zahl exakt wie Slotzahlen */
       font-size: clamp(18px, 8vmin, 36px);
       line-height: 1;
-
       padding: 14px 0;
       border-radius: 10px;
       cursor: pointer;
@@ -721,6 +740,54 @@
       background: var(--ui-panel-bg);
       color: var(--ui-text);
       border-color: rgba(0,0,0,0.55);
+    }
+
+    /* ===== KIPPRICHTUNG ===== */
+    .kippDirTitle{
+      font-weight: 1000;
+      letter-spacing: 0.10em;
+      text-transform: uppercase;
+      color: var(--ui-text);
+      text-shadow: 0 1px 0 rgba(0,0,0,0.35);
+      font-size: 34px;
+      line-height: 0.95;
+      text-align: left;
+      user-select:none;
+      margin-top: 10px;
+      margin-bottom: 10px;
+    }
+
+    .dirBtn{
+      flex: 1 1 0;
+      border: 1px solid rgba(0,0,0,0.35);
+      background: rgba(234,215,190,0.95);
+      color: #2a160c;
+      font-weight: 1000;
+      letter-spacing: 0.08em;
+      text-transform: uppercase;
+      padding: 16px 12px;
+      border-radius: 12px;
+      cursor: pointer;
+      user-select:none;
+      -webkit-tap-highlight-color: transparent;
+      box-shadow:
+        0 10px 18px rgba(0,0,0,0.20),
+        0 0 0 1px rgba(255,255,255,0.12) inset;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      gap: 10px;
+    }
+    .dirBtn:active{ transform: translateY(1px) scale(0.99); }
+    .dirBtn[disabled]{
+      opacity: 0.45;
+      cursor: default;
+      filter: grayscale(0.2);
+    }
+    .dirIcon{
+      width: 18px;
+      height: 18px;
+      display:inline-block;
     }
 
     @keyframes blinkSoft{
@@ -739,7 +806,6 @@
     .attnPlay #btnPlay{ animation: blinkSoft 0.9s ease-in-out infinite; }
     .attnSet .gcBtn.set{ animation: blinkSoft 0.85s ease-in-out infinite; }
 
-    /* Pulsieren versetzt */
     #decisionPanel.pulseSeq .miniBtn{ animation: pulseSoft 1.15s ease-in-out infinite; }
     #decisionPanel.pulseSeq .miniBtn:nth-child(1){ animation-delay: 0.00s; }
     #decisionPanel.pulseSeq .miniBtn:nth-child(2){ animation-delay: 0.10s; }
@@ -755,9 +821,15 @@
 
     <!-- HEADER -->
     <div class="titleRow" aria-label="Titelzeile">
-      <!-- FIX 1: Back-Button gleicher Typus wie X (kein Emoji) -->
+      <!-- ✅ Back: U-Pfeil + 9/6 -->
       <button id="backBtn" class="navBtn" aria-label="Zurück zur Speed-Einstellung" type="button">
-        <span>←</span>
+        <svg class="backIcon" viewBox="0 0 24 24" aria-hidden="true">
+          <!-- liegendes U -->
+          <path d="M18 7v6a6 6 0 0 1-6 6H8" fill="none" stroke="rgba(0,0,0,0.88)" stroke-width="2.4" stroke-linecap="round" stroke-linejoin="round"/>
+          <!-- Pfeil nach links -->
+          <path d="M10 17l-3 2.5L10 22" fill="none" stroke="rgba(0,0,0,0.88)" stroke-width="2.4" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+        <div class="backDots" aria-hidden="true"><span>9</span><span>6</span></div>
       </button>
 
       <div class="titleMain"><h1>KIPP COLOR</h1></div>
@@ -854,6 +926,25 @@
                   <button class="miniBtn" data-k="5" type="button">5</button>
                   <button class="miniBtn" data-k="6" type="button">6</button>
                 </div>
+
+                <div class="kippDirTitle">KIPPRICHTUNG?</div>
+                <div class="gcRow" aria-label="Kipprichtung">
+                  <button id="btnCCW" class="dirBtn" type="button" disabled>
+                    <svg class="dirIcon" viewBox="0 0 24 24" aria-hidden="true">
+                      <path d="M12 5a7 7 0 1 1-6.3 4" fill="none" stroke="rgba(0,0,0,0.88)" stroke-width="2.2" stroke-linecap="round"/>
+                      <path d="M6 9V5H2" fill="none" stroke="rgba(0,0,0,0.88)" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                    CCW
+                  </button>
+                  <button id="btnCW" class="dirBtn" type="button" disabled>
+                    <svg class="dirIcon" viewBox="0 0 24 24" aria-hidden="true">
+                      <path d="M12 5a7 7 0 1 0 6.3 4" fill="none" stroke="rgba(0,0,0,0.88)" stroke-width="2.2" stroke-linecap="round"/>
+                      <path d="M18 9V5h4" fill="none" stroke="rgba(0,0,0,0.88)" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                    CW
+                  </button>
+                </div>
+
               </div>
             </div>
 
@@ -885,6 +976,9 @@
 
     const btnSetNumbers = document.getElementById("btnSetNumbers");
     const decisionPanel = document.getElementById("decisionPanel");
+
+    const btnCCW = document.getElementById("btnCCW");
+    const btnCW  = document.getElementById("btnCW");
 
     const gcPoints    = document.getElementById("gcPoints");
     const gcHi        = document.getElementById("gcHi");
@@ -993,9 +1087,11 @@
       kipGroup.style.setProperty("--rot", deg + "deg");
     }
 
-    function advanceFullCW(){
-      rotIndex  = (rotIndex + 1) % 4;
-      faceIndex = (faceIndex + 1) % 3;
+    /* ✅ Vorwärts/Retour “nur Foto”: KEIN umsortieren, nur Index-/Rotation-Weiter/Zurück */
+    function advanceFull(dir){
+      // dir: +1 = CW, -1 = CCW
+      rotIndex  = (rotIndex + dir + 4) % 4;
+      faceIndex = (faceIndex + dir + 3) % 3;
       setRotationSnap();
     }
 
@@ -1129,25 +1225,25 @@
       showKip(); renderKipEmpty();
       if(!await waitOrPause(getTiming().holdMs, myToken)) { runningDemo=false; return; }
 
-      advanceFullCW(); showW(); renderWEmpty();
+      advanceFull(+1); showW(); renderWEmpty();
       if(!await waitOrPause(getTiming().holdMs, myToken)) { runningDemo=false; return; }
 
       showKip(); renderKipEmpty();
       if(!await waitOrPause(getTiming().holdMs, myToken)) { runningDemo=false; return; }
 
-      advanceFullCW(); showW(); renderWEmpty();
+      advanceFull(+1); showW(); renderWEmpty();
       if(!await waitOrPause(getTiming().holdMs, myToken)) { runningDemo=false; return; }
 
       showKip(); renderKipEmpty();
       if(!await waitOrPause(getTiming().holdMs, myToken)) { runningDemo=false; return; }
 
-      advanceFullCW(); showW(); renderWEmpty();
+      advanceFull(+1); showW(); renderWEmpty();
       if(!await waitOrPause(getTiming().holdMs, myToken)) { runningDemo=false; return; }
 
       showKip(); renderKipEmpty();
       if(!await waitOrPause(getTiming().holdMs, myToken)) { runningDemo=false; return; }
 
-      advanceFullCW(); showW(); renderWEmpty();
+      advanceFull(+1); showW(); renderWEmpty();
       if(!await waitOrPause(getTiming().holdMs, myToken)) { runningDemo=false; return; }
 
       runningDemo = false;
@@ -1160,6 +1256,7 @@
       setPlayGlyph(false);
     }
 
+    /* ===== Zahlen-Set (3 Faces) ===== */
     let planned = [
       [null,null,null,null],
       [null,null,null,null],
@@ -1184,20 +1281,27 @@
       for(let i=0;i<4;i++) renderNumber(slotTargetsW[i], curr[i]);
     }
 
-    function mapHiddenToVisible_CW(face){
-      const [f1,f2,f3,f4] = face;
-      return [f4, f3, f2, f1];
-    }
-
-    function renderKip(){
+    /* ✅ “Foto”-Prinzip: keine F4..F1-Umkehr-Magie.
+       Wir zeigen einfach die Face-Arrays so wie sie sind.
+       CW: links = nextFace, CCW: links = prevFace  */
+    function renderKip_CW(){
       setRotationSnap();
       const curr = sets[faceIndex];
       const nextFaceIndex = (faceIndex + 1) % 3;
       const next = sets[nextFaceIndex];
 
       for(let i=0;i<4;i++) renderNumber(slotTargetsKipRight[i], curr[i]);
-      const nextPreview = mapHiddenToVisible_CW(next);
-      for(let i=0;i<4;i++) renderNumber(slotTargetsKipLeft[i], nextPreview[i]);
+      for(let i=0;i<4;i++) renderNumber(slotTargetsKipLeft[i],  next[i]);
+    }
+
+    function renderKip_CCW(){
+      setRotationSnap();
+      const curr = sets[faceIndex];
+      const prevFaceIndex = (faceIndex + 2) % 3;
+      const prev = sets[prevFaceIndex];
+
+      for(let i=0;i<4;i++) renderNumber(slotTargetsKipRight[i], curr[i]);
+      for(let i=0;i<4;i++) renderNumber(slotTargetsKipLeft[i],  prev[i]);
     }
 
     function reroll12_keepEmpty(){
@@ -1235,11 +1339,11 @@
       await sleep(Math.round(getTiming().holdMs * 0.5));
       if(myToken!==setToken){ runningSet=false; return; }
 
-      showKip(); renderKip();
+      showKip(); renderKip_CW();
       await sleep(getTiming().holdMs);
       if(myToken!==setToken){ runningSet=false; return; }
 
-      advanceFullCW(); showW(); renderWEmpty();
+      advanceFull(+1); showW(); renderWEmpty();
       await sleep(Math.round(getTiming().holdMs * 0.5));
       if(myToken!==setToken){ runningSet=false; return; }
 
@@ -1247,11 +1351,11 @@
       await sleep(Math.round(getTiming().holdMs * 0.5));
       if(myToken!==setToken){ runningSet=false; return; }
 
-      showKip(); renderKip();
+      showKip(); renderKip_CW();
       await sleep(getTiming().holdMs);
       if(myToken!==setToken){ runningSet=false; return; }
 
-      advanceFullCW(); showW(); renderWEmpty();
+      advanceFull(+1); showW(); renderWEmpty();
       await sleep(Math.round(getTiming().holdMs * 0.5));
       if(myToken!==setToken){ runningSet=false; return; }
 
@@ -1259,30 +1363,28 @@
       await sleep(Math.round(getTiming().holdMs * 0.5));
       if(myToken!==setToken){ runningSet=false; return; }
 
-      showKip(); renderKip();
+      showKip(); renderKip_CW();
       await sleep(getTiming().holdMs);
       if(myToken!==setToken){ runningSet=false; return; }
 
-      // ===== Bisheriges Ende (Q3, W1 oben) =====
-      advanceFullCW();
+      // Ende (wie gehabt): noch einmal weiter, W sichtbar
+      advanceFull(+1);
       showW();
       renderW();
 
-      // ✅ NEU: 3 zusätzliche komplette Kipps ab dem bisherigen Ende
-      // Zweck: weitere vollbestückte Zwischenkipps sichtbar machen / rückwärts sauber abspielbar
+      // 3 Extra-Kipps (voll bestückt) – bleiben drin, dienen als “Foto”-Zwischenstates
       const EXTRA_KIPPS_AFTER_END = 3;
 
-      // kurzer Hold, damit man den bisherigen Endzustand kurz "stehen" sieht
       await sleep(Math.round(getTiming().holdMs * 0.60));
       if(myToken!==setToken){ runningSet=false; return; }
 
       for(let j=0; j<EXTRA_KIPPS_AFTER_END; j++){
         showKip();
-        renderKip();
+        renderKip_CW();
         await sleep(getTiming().holdMs);
         if(myToken!==setToken){ runningSet=false; return; }
 
-        advanceFullCW();
+        advanceFull(+1);
 
         showW();
         renderW();
@@ -1392,20 +1494,41 @@
       decisionPanel.classList.remove("pulseSeq");
     }
 
+    function setDirButtonsEnabled(on){
+      btnCW.disabled  = !on;
+      btnCCW.disabled = !on;
+    }
+
     function selectKippCount(k){
       selectedKippCount = (k == null) ? null : Number(k);
       document.querySelectorAll('.miniBtn[data-k]').forEach(btn=>{
         btn.classList.toggle("sel", Number(btn.dataset.k) === selectedKippCount);
       });
-      if(selectedKippCount != null) stopPulse();
+      if(selectedKippCount != null){
+        stopPulse();
+        setDirButtonsEnabled(true);
+      }else{
+        setDirButtonsEnabled(false);
+      }
     }
 
     document.querySelectorAll('.miniBtn[data-k]').forEach(btn=>{
       btn.addEventListener("click", () => {
         if(busyMove) return;
         selectKippCount(btn.dataset.k);
-        performKippCW(selectedKippCount);
       });
+    });
+
+    btnCW.addEventListener("click", () => {
+      if(busyMove) return;
+      if(selectedKippCount == null) return;
+      performKipp(+1, selectedKippCount);
+    });
+
+    btnCCW.addEventListener("click", () => {
+      if(busyMove) return;
+      if(selectedKippCount == null) return;
+      performKipp(-1, selectedKippCount);
     });
 
     function beginPlayerPhase(){
@@ -1448,7 +1571,7 @@
 
     let busyMove = false;
 
-    async function performKippCW(count){
+    async function performKipp(dir, count){
       if(busyMove) return;
       if(!count) return;
 
@@ -1458,10 +1581,11 @@
 
       for(let i=0; i<c; i++){
         showKip();
-        renderKip();
+        if(dir === +1) renderKip_CW();
+        else renderKip_CCW();
         await sleep(getTiming().holdMs);
 
-        advanceFullCW();
+        advanceFull(dir);
 
         showW();
         renderW();
@@ -1550,6 +1674,7 @@
 
       resetToW1Q0_Empty();
       showSpeedMode();
+      setDirButtonsEnabled(false);
     });
 
     window.addEventListener("resize", () => {
